--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>夏の響宴</title>
     <meta name="discription" content="こちらは夏の響宴のホームページです">
-    <link rel="stylesheet" href="./css/kyoen.css">
+    <link rel="stylesheet" href="./kyoen.css">
 </head>
 <body>
     <header>
