--- a/sanka.html
+++ b/sanka.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>夏の響宴</title>
     <meta name="discription" content="こちらは夏の響宴のホームページです">
-    <link rel="stylesheet" href="./css/sanka.css">
+    <link rel="stylesheet" href="./sanka.css">
 </head>
  <body>
     <header>
