--- a/about.html
+++ b/about.html
@@ -35,49 +35,12 @@
         <h2>主催</h2>
         <h3>夏の学生音楽祭実行委員会</h3>
         <h2>協賛</h2>
-        <h3>続報を待て</h3>
+        <h3>--</h3>
         <h2>特別協賛</h2>
-        <h3>ｆｊｋｄぁ</h33>
+        <h3>---</h33>
         <h2>後援 </h2>
-        <h3>白石区</h3>
-        <h2>運営体制</h2>
-        <dl class="members">
-        <dt>実行委員長</dt>
-        <dd>申千春</dd>
-        <dt>副委員長</dt>
-        <dd class="n">
-            <p>本多渉</p>
-            <p>青木千紗</p>
-        </dd>
-        <dt>会計</dt>
-        <dd class="n">
-            <p>佐々木優香</p>
-            <p>森谷陽菜</p>
-        </dd>
-        <dt>会計監査</dt>
-        <dd>浜中雄大</dd>
-        <dt>総務</dt>
-        <dd class="n">
-            <p>江島直太朗</p>
-            <p>陣内二季</p>
-        </dd>
-        <dt>渉外</dt>
-        <dd class="n">
-            <p>古野満理佳</p>
-            <p>石船吉乃</p>
-        </dd>
-        <dt>ウェブ</dt>
-        <dd class="n">
-            <p>市原和樹</p>
-            <p>大野沙耶</p>
-        </dd>
-        <dt>広報</dt>
-        <dd class="n">
-            <p>土方悠靖</p>
-            <p>山田太郎</p>
-        </dd>
-        </dl>
-      </div>
+        <h3>江東区</h3>
+       
     </section>
     </main>
     <script src="kyoen.js"></script>
