--- a/access.html
+++ b/access.html
@@ -12,7 +12,7 @@
         <h1 id="site_title">夏の響演2024</h1>
         <nav id="navigation">
             <ul>
-                <li><a href="./kyoen.html">TOP</a></li>
+                <li><a href="./index.html">TOP</a></li>
                 <li><a href="./about.html">ABOUT</a></li>
                 <li><a href="./sanka.html">参加団体紹介</a></li>
                 <li><a href="./program.html">プログラム</a></li>
