--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         <h1>TOP</h1>
         <h2>夏の響宴2024</h2>
         <p>～大学をつなぐ音楽の祭典～</p>
-        <p>参加大学：東京大学、電気通信大学、一橋大学、東京医科歯科大学、東京工業大学、東京都立大学、東京外国語大学</p>
+        <p>参加大学：東京大学、電気通信大学、一橋大学、東京医科歯科大学、東京工業大学、東京都立大学、東京外国語大学、東京農工大学</p>
        </div>
       </div>
       <div class = "black"></div>
