--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>夏の響宴</title>
+    <title>夏の響宴2024</title>
     <meta name="discription" content="こちらは夏の響宴のホームページです">
     <link rel="stylesheet" href="./kyoen.css">
 </head>
