--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>夏の響宴2024</title>
-    <meta name="discription" content="こちらは夏の響宴のホームページです">
+    <meta name="discription" content="こちらは夏の響演のホームページです。">
     <link rel="stylesheet" href="./kyoen.css">
 </head>
 <body>
@@ -31,7 +31,7 @@
       <div class = "container">
        <div class = "top">
         <h1>TOP</h1>
-        <h2>夏の響宴2024</h2>
+        <h2>夏の響演2024</h2>
         <p>～大学をつなぐ音楽の祭典～</p>
         <p>参加大学：東京大学、電気通信大学、一橋大学、東京医科歯科大学、東京工業大学、東京都立大学、東京外国語大学、東京農工大学</p>
        </div>
