--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
     <section class="setumei">
       <div class = "tutorial">
         <h2>夏の響宴とは</h2>
-        <p>　夏の響宴は、都内7大学のピアノ、室内楽サークルが集まって行う合同演奏会で、音楽を通じて様々な人と交流することを目的としています。<br>
+        <p>　夏の響宴は、都内8大学のピアノ、室内楽サークルが集まって行う合同演奏会で、音楽を通じて様々な人と交流することを目的としています。<br>
           　多くの人が楽しめるよう、クラシックから現代の邦楽まで様々な曲を演奏する予定で、ピアノをはじめとしてヴァイオリンなどの様々な楽器による演奏を
         お楽しみいただける予定です。 </p>
         <h2>入場料無料！入退場自由！</h2>
@@ -49,7 +49,7 @@
           未就学児のご来場も大歓迎です！​</p>
         <h2>多彩なプログラム！</h2>
         <p>古典から近・現代までのクラシック音楽に加えて、​邦楽のアレンジ曲も多数登場します。
-          ​​​​また、企画演奏では、「自然」「日本の作曲家」「Jazz」 の３テーマに沿った曲を演奏します。</p>
+          ​​​​また、企画演奏では、「古典派」のテーマに沿った曲を演奏します。</p>
         <h2>様々な楽器による演奏</h2>
         <p>ピアノ独奏だけでなくヴァイオリン、クラリネット などによるアンサンブルも予定しております！​様々な楽器が織りなす美しい旋律も​楽しむことができま
           すので、ぜひご期待ください！</p>
