--- a/sanka.html
+++ b/sanka.html
@@ -68,6 +68,9 @@
      <p>プラタナスの会は、月に2，3回ほど講堂に集まってピアノを弾きあったり、交流会を開いたりしています。また、学園祭での演奏などもしています。
         あまり規模の大きい団体ではありませんが、楽しく活動しています。日々練習を頑張っているので、是非お聞きください！
      </p>
+     <section class="uec">
+     <h1>（新）東京農工大学ピアノの会</h1>
+     <p>今年度から新しく参加します</p>
     </main>
     <script src="kyoen.js"></script>
  </body>
