--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 </body>
 <footer>
             <div class="footer-company">
-                <a target="_blank" href="https://fazioli.co.jp/"><img src="https://github.com/kazuki0202/natsunokyoen.github.io/blob/main/fazioli.jpg?raw=true"></a>
+                <a target="_blank" href="https://fazioli.co.jp/"><img src="https://github.com/kazuki0202/natsunokyoen/blob/main/banner.png"></a>
                 <a target="_blank" href="https://www.navida.ne.jp/snavi/100580_1.html"><img src="https://github.com/kankankanp/banner-koukoku.github.io/blob/main/sanken.jpg?raw=true"></a>
                 <a target="_blank" href="https://www.tiaa-jp.com/"><img src="https://github.com/kankankanp/banner-koukoku.github.io/blob/main/tiaa.jpg?raw=true"></a>
                 <a target="_blank" href="https://www.piano.or.jp/"><img src="https://github.com/kankankanp/banner-koukoku.github.io/blob/main/pithina.jpg?raw=true"></a>
