--- a/index.html
+++ b/index.html
@@ -66,16 +66,11 @@
 <footer>
             <div class="footer-company">
                 <a target="_blank" href="https://fazioli.co.jp/"><img src="https://github.com/kazuki0202/natsunokyoen/blob/main/banner.png"></a>
-                <a target="_blank" href="https://www.navida.ne.jp/snavi/100580_1.html"><img src="https://github.com/kankankanp/banner-koukoku.github.io/blob/main/sanken.jpg?raw=true"></a>
-                <a target="_blank" href="https://www.tiaa-jp.com/"><img src="https://github.com/kankankanp/banner-koukoku.github.io/blob/main/tiaa.jpg?raw=true"></a>
-                <a target="_blank" href="https://www.piano.or.jp/"><img src="https://github.com/kankankanp/banner-koukoku.github.io/blob/main/pithina.jpg?raw=true"></a>
-                <a target="_blank" href="https://www.orsc.co.jp/"><img src="https://github.com/kankankanp/banner-koukoku.github.io/blob/main/oriental.jpg?raw=true"></a>
+                <a target="_blank" href="https://www.navida.ne.jp/snavi/100580_1.html"><img src="https://github.com/kazuki0202/natsunokyoen/blob/main/sanken.jpg"></a>
+                <a target="_blank" href="https://www.tiaa-jp.com/"><img src="https://github.com/kazuki0202/natsunokyoen/blob/main/ptnabanner%20(1).png"></a>
+                <a target="_blank" href="https://www.piano.or.jp/"><img src="https://github.com/kazuki0202/natsunokyoen/blob/main/ptnabanner(1).png"></a>
+                <a target="_blank" href="https://www.orsc.co.jp/"><img src="https://github.com/kankankanp/banner-koukoku.github.io/blob/main/oriental.jpg"></a>
                 <a target="_blank" href="https://www.arurumusicschool.com/index.htm"><img src="https://github.com/kankankanp/banner-koukoku.github.io/blob/main/aruru.jpg?raw=true"></a>
-            </div>
-            <div class="footer-SNS">
-                <a class="twitter-btn" href="https://twitter.com/natsuno_kyoen" target="_blank"><span class="fa fa-twitter"></span>Twitter</a>
-                <a class="youtube-btn" href="https://www.youtube.com/channel/UCxrXTx_wbZwWalevr9ZlSnw?app=desktop" target="_blank"><span class="fa fa-youtube"></span>YouTube</a>
-            
             </div>
 　</footer>
 
