--- a/index.html
+++ b/index.html
@@ -69,8 +69,7 @@
                 <a target="_blank" href="https://www.navida.ne.jp/snavi/100580_1.html"><img src="https://github.com/kazuki0202/natsunokyoen/blob/main/sanken.jpg"></a>
                 <a target="_blank" href="https://www.tiaa-jp.com/"><img src="https://github.com/kazuki0202/natsunokyoen/blob/main/ptnabanner%20(1).png"></a>
                 <a target="_blank" href="https://www.piano.or.jp/"><img src="https://github.com/kazuki0202/natsunokyoen/blob/main/ptnabanner(1).png"></a>
-                <a target="_blank" href="https://www.orsc.co.jp/"><img src="https://github.com/kankankanp/banner-koukoku.github.io/blob/main/oriental.jpg"></a>
-                <a target="_blank" href="https://www.arurumusicschool.com/index.htm"><img src="https://github.com/kankankanp/banner-koukoku.github.io/blob/main/aruru.jpg?raw=true"></a>
+                <a target="_blank" href="https://www.orsc.co.jp/"><img src="https://github.com/kazuki0202/natsunokyoen/blob/main/pithina.jpg"></a>
             </div>
 　</footer>
 
