--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 </body>
 <footer>
             <div class="footer-company">
-                <a target="_blank" href="https://fazioli.co.jp/"><img src="https://github.com/kazuki0202/natsunokyoen/blob/main/banner.png"></a>
+                <a target="_blank" href="https://fazioli.co.jp/"><img src="./banner.png"></a>
                 <a target="_blank" href="https://www.navida.ne.jp/snavi/100580_1.html"><img src="https://github.com/kazuki0202/natsunokyoen/blob/main/sanken.jpg"></a>
                 <a target="_blank" href="https://www.tiaa-jp.com/"><img src="https://github.com/kazuki0202/natsunokyoen/blob/main/ptnabanner%20(1).png"></a>
                 <a target="_blank" href="https://www.piano.or.jp/"><img src="https://github.com/kazuki0202/natsunokyoen/blob/main/ptnabanner(1).png"></a>
