--- a/index.html
+++ b/index.html
@@ -65,11 +65,11 @@
 </body>
 <footer>
             <div class="footer-company">
-                <a target="_blank" href="https://fazioli.co.jp/"><img src="./banner.png"></a>
-                <a target="_blank" href="https://www.navida.ne.jp/snavi/100580_1.html"><img ./sanken.jpg"></a>
-                <a target="_blank" href="https://www.tiaa-jp.com/"><img src="./tiaaバナー300×100.png"></a>
-                <a target="_blank" href="https://www.piano.or.jp/"><img src="./ptnabanner(1).png"></a>
-                <a target="_blank" href="https://www.orsc.co.jp/"><img src="./pithina.jpg"></a>
+                <a target="_blank" href="https://fazioli.co.jp/"><img src="./banner.png" alt=""></a>
+                <a target="_blank" href="https://www.navida.ne.jp/snavi/100580_1.html"><img "./sanken.jpg" alt=""></a>
+                <a target="_blank" href="https://www.tiaa-jp.com/"><img src="./tiaaバナー300×100.png" alt=""></a>
+                <a target="_blank" href="https://www.piano.or.jp/"><img src="./ptnabanner(1).png" alt=""></a>
+                <a target="_blank" href="https://www.orsc.co.jp/"><img src="./pithina.jpg" alt=""></a>
             </div>
 　</footer>
 
