--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
                 <a target="_blank" href="https://www.navida.ne.jp/snavi/100580_1.html"><img "./sanken.jpg" alt=""></a>
                 <a target="_blank" href="https://www.tiaa-jp.com/"><img src="./tiaaバナー300×100.png" alt=""></a>
                 <a target="_blank" href="https://www.piano.or.jp/"><img src="./ptnabanner(1).png" alt=""></a>
-                <a target="_blank" href="https://www.orsc.co.jp/"><img src="./pithina.jpg" alt=""></a>
+                <a target="_blank" href="https://www.orsc.co.jp/"><img src="./ptnabanner(1).png" alt=""></a>
             </div>
 　</footer>
 
