--- a/about.html
+++ b/about.html
@@ -35,9 +35,13 @@
         <h2>主催</h2>
         <h3>夏の学生音楽祭実行委員会</h3>
         <h2>協賛</h2>
-        <h3>--</h3>
+        <h3>ファツィオリジャパン株式会社<br />
+            三研工業株式会社<br />
+            東京国際芸術協会<br />
+            ピティナ（一般社団法人全日本ピアノ指導者協会<br />
+            </h3>
         <h2>特別協賛</h2>
-        <h3>---</h33>
+        <h3>オリエンタル白石株式会社</h33>
         <h2>後援 </h2>
         <h3>江東区</h3>
        
