--- a/index.html
+++ b/index.html
@@ -70,6 +70,7 @@
                 <a target="_blank" href="https://www.tiaa-jp.com/"><img src="./tiaaバナー300×100.png" alt=""></a>
                 <a target="_blank" href="https://www.piano.or.jp/"><img src="./pithina.jpg" alt=""></a>
                 <a target="_blank" href="https://www.orsc.co.jp/"><img src="./oriental.jpg" alt=""></a>
+                <a target="_blank" href="https://www.arurumusicschool.com/index.htm"><img src="./aruru.jpg"alt=""></a>
             </div>
 　</footer>
 
