--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 </body>
 <footer>
             <div class="footer-company">
-                <a target="_blank" href="https://fazioli.co.jp/"><img src="./banner.png" alt=""></a>
+                <a target="_blank" href="https://fazioli.co.jp/"><img src="./banner.png" alt="" width="300" hight="100"></a>
                 <a target="_blank" href="https://www.navida.ne.jp/snavi/100580_1.html"><img src= "./sanken.jpg" alt=""></a>
                 <a target="_blank" href="https://www.tiaa-jp.com/"><img src="./tiaaバナー300×100.png" alt=""></a>
                 <a target="_blank" href="https://www.piano.or.jp/"><img src="./pithina.jpg" alt=""></a>
