--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
                 <li><a href="./index.html">TOP</a></li>
                 <li><a href="./about.html">ABOUT</a></li>
                 <li><a href="./sanka.html">参加団体紹介</a></li>
-                <li><a href="./program.html">プログラム</a></li>
+                <li><a href="./pronatsu.pdf">プログラム</a></li>
                 <li><a href="./access.html">アクセス</a></li>
                 <li><a href="./otoi.html">問い合わせ</a></li>
             </ul>
